--- a/1-api-express/package.json
+++ b/1-api-express/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon 1.http.js"
+    "dev:1": "nodemon 1.http.js",
+    "dev:2": "nodemon 2.routing.js"
   },
   "keywords": [],
   "author": "",
