--- a/2-rest-api/package.json
+++ b/2-rest-api/package.json
@@ -10,12 +10,14 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "servor": "^4.0.2",
     "standard": "^17.1.0"
   },
   "eslintConfig": {
     "extends": "standard"
   },
   "dependencies": {
+    "cors": "2.8.5",
     "express": "4.18.2",
     "zod": "3.22.4"
   }
